force-app/main/default/objects/OpportunityEvent__e/OpportunityEvent__e.object-meta.xml
<CustomObject>
    <label>Opportunity Event</label>
    <pluralLabel>Opportunity Events</pluralLabel>
</CustomObject>