force-app/main/default/objects/OpportunityEvent__e/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>ChangeType</label>
    <length>55</length>
    <type>Text</type>
</CustomField>