force-app/main/default/objects/OpportunityEvent__e/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <label>Opportunity ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>