force-app/main/default/objects/OpportunityEvent__e/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>